feat : change add face req structure to one img at a time
