# face_recognition_api/app/domains/faces.py
@@ -1,12 +1,10 @@
 from __future__ import annotations
 
-import enum
 import uuid
 from typing import TYPE_CHECKING
 
 from app.core.base import Base
 from pgvector.sqlalchemy import Vector
-from sqlalchemy import Enum
 from sqlalchemy import ForeignKey
 from sqlalchemy import text
 from sqlalchemy import UUID
@@ -16,12 +14,6 @@ from sqlalchemy.orm import relationship
 
 if TYPE_CHECKING:
     from app.domains.user import UsersInfo
-
-
-class Directions(enum.Enum):
-    FRONT = 'front'
-    LEFT = 'left'
-    RIGHT = 'right'
 
 
 class Faces(Base):
@@ -38,8 +30,7 @@ class Faces(Base):
         ForeignKey('users_info.id')
     )
 
-    direction: Mapped[Directions] = mapped_column(
-        Enum(Directions, values_callable=lambda obj: [e.value for e in obj]))
+    direction: Mapped[str] = mapped_column()
 
     embeddings: Mapped[str] = mapped_column(Vector(512))
 
